# AIoD-Model-Registry

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: generate-configs.yml  run_tests.yml
aiod_registry/: __init__.py  schema.json  schema.py  utils.py
aiod_registry/manifests/: cellpose.json  cellposesam.json  empanada.json  mitonet.json  plantseg2.json  sam.json  sam2.json  sam_test.json  seai_unet.json  stardist.json  unet_seai.json
aiod_registry/tests/: test_jsons.py
default_configs/: cellpose.yaml  cellposesam.yaml  empanada.yaml  plantseg2.yaml  sam.yaml  sam2.yaml
tests/: test_jsons.py  test_utils.py
