[project]
name = "aiod-registry"
dynamic = ["version"]
description = "A registry of models for use with AI OnDemand (AIoD)"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    {name = "Cameron Shand", email = "cameron.shand@crick.ac.uk"},
    {name = "Jon Smith", email = "jon.smith@crick.ac.uk"},
    {name = "Numan Ahmed", email = "numan.ahmed@crick.ac.uk"}
]
dependencies = [
    "pytest",
    "pydantic >= 2.0"
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=42.0.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
